# seekwel

./: Cargo.toml  README.md
examples/: todo.rs
seekwel-derive/: Cargo.toml
seekwel-derive/src/: lib.rs
seekwel-macros/: Cargo.toml
seekwel-macros/src/: lib.rs
seekwel-macros/src/model/: analysis.rs  codegen.rs  ir.rs  mod.rs
src/: connection.rs  error.rs  lib.rs  model.rs
src/model/: association.rs  builder.rs  comparison.rs  mod.rs  params.rs  query.rs  relation.rs  sql_field.rs  validation.rs
src/model/association/: belongs_to.rs  has_many.rs
src/model/query/: chunked.rs  eager.rs  expression.rs  lazy.rs
src/schema/: apply.rs  desired.rs  diff.rs  history.rs  introspect.rs  mod.rs  plan.rs  registry.rs  types.rs
src/sql/: mod.rs  mutation.rs  render.rs  schema.rs  select.rs
tests/: belongs_to.rs  concurrency.rs  connection_api.rs  custom_primary_key.rs  double_init.rs  file_connection.rs  has_many.rs  indexes.rs  memory_connection.rs  model.rs  not_initialized.rs  params.rs  query.rs  schema.rs  schema_blocker.rs  schema_registry.rs  sql_field.rs  tokio_feature.rs  transaction.rs  ui.rs  validation.rs
tests/ui/: belongs_to_option_target.rs  belongs_to_option_target.stderr  has_many_parent_mismatch.rs  has_many_parent_mismatch.stderr
