[workspace]
members = ["seekwel-macros"]

[package]
name = "seekwel"
version = "0.1.7"
edition = "2024"
description = "an experimental sqlite library"
license = "BSD-3-Clause"

[dependencies]
rusqlite = { version = "0.39.0", features = ["bundled-sqlcipher"] }
seekwel-macros = { version = "0.1.4", path = "seekwel-macros" }

[dev-dependencies]
trybuild = "1.0"
crossterm = "0.28"
ratatui = "0.29"
