[workspace]
members = ["seekwel-macros"]

[package]
name = "seekwel"
version = "0.1.14"
edition = "2024"
description = "an experimental sqlite library"
license = "BSD-3-Clause"

[features]
default = []
serde = ["dep:serde", "seekwel-macros/serde"]

[dependencies]
rusqlite = { version = "0.39.0", features = ["bundled-sqlcipher"] }
seekwel-macros = { version = "0.1.14", path = "seekwel-macros" }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
trybuild = "1.0"
crossterm = "0.28"
ratatui = "0.29"
