[workspace]
members = ["seekwel-macros"]

[package]
name = "seekwel"
version = "0.1.24"
edition = "2024"
description = "an experimental sqlite library"
license = "BSD-3-Clause"

[features]
default = []
serde = ["dep:serde", "seekwel-macros/serde"]
tokio = ["dep:tokio"]

[dependencies]
log = "0.4"
rusqlite = { version = "0.39.0" }
seekwel-macros = { version = "0.1.24", path = "seekwel-macros" }
serde = { version = "1.0", features = ["derive"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

[dev-dependencies]
trybuild = "1.0"
crossterm = "0.28"
ratatui = "0.29"
